syntax = "proto3";

option go_package = "/demo";

package pb;

service demo {
    rpc GetUser (UserReq) returns (UserRsp) {
    }
}

message UserReq {
    string id = 1;
}
message UserRsp {
    string name = 1;
    string age = 2;
}

enum PhoneType {
    HOME = 0;
    WORK = 1;
}

message Phone {
    PhoneType type = 1;
    string number = 2;
}

message Person {
    int32 id = 1;
    string name = 2;
    repeated Phone phones = 3;
}

message ContactBook {
    repeated Person persons = 1;
}